[package]
name = "ethereum-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0.11"
serde = { version = "1.0.196", features = ["derive"] }
anyhow = { version = "1.0.79", features = ["backtrace"] }
serde_json = "1.0.125"
hex = "0.4.3"
sha2 = "0.10.8"
sha3 = "0.10.8"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
